--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.0.1
   http: ^0.13.4
+  logger: ^1.1.0
+  bot_toast: ^4.0.1
+  intl: ^0.17.0
+  cached_network_image: ^3.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
