--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   bot_toast: ^4.0.1
   intl: ^0.17.0
   cached_network_image: ^3.2.0
-
+  equatable: ^2.0.3
+  dartz: ^0.10.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
