--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,12 @@ dependencies:
   http: ^0.13.4
   logger: ^1.1.0
   bot_toast: ^4.0.1
+  flutter_html: ^2.2.1
   intl: ^0.17.0
   cached_network_image: ^3.2.0
   equatable: ^2.0.3
   dartz: ^0.10.1
+  carousel_slider: ^4.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -63,6 +65,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
